--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+#mysql configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/amazon
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+
+#JavaMailSender Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=amazon.servicebackend@gmail.com
+spring.mail.password=fklnpaqguufkkosb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
