--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #mysql configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/amazon
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=manasP6@2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 #JavaMailSender Configuration
